[Fix]  #16254 : url generation on the pad list